Update top logo

--- a/SRILAB.html
+++ b/SRILAB.html
@@ -538,7 +538,9 @@
     <!-- Header -->
     <header>
         <div class="container header-container">
-            <div class="logo">UTB <span>Sand Screen Lab</span></div>
+            <div class="logo">
+                <img src="/api/placeholder/50/50" alt="UTB Logo" style="height: 40px; width: auto;">
+            </div>
             <nav>
                 <ul>
                     <li><a href="#home">Home</a></li>
