--- a/SRILAB.html
+++ b/SRILAB.html
@@ -539,7 +539,7 @@
     <header>
         <div class="container header-container">
             <div class="logo">
-                <img src="/api/placeholder/50/50" alt="UTB Logo" style="height: 40px; width: auto;">
+                <img src="images/utblogo.png" alt="UTB Logo" style="height: 40px; width: auto;">
             </div>
             <nav>
                 <ul>
