--- a/SRILAB.html
+++ b/SRILAB.html
@@ -138,7 +138,7 @@
         
         /* Hero Section */
         .hero {
-            background: linear-gradient(rgba(51, 51, 51, 0.8), rgba(51, 51, 51, 0.9)), url('/api/placeholder/1200/600') center/cover no-repeat;
+            background: linear-gradient(rgba(51, 51, 51, 0.8), rgba(51, 51, 51, 0.9)), url('/images/noddingdonkey') center/cover no-repeat;
             color: white;
             text-align: center;
             padding: 150px 0 100px;
