--- a/SRILAB.html
+++ b/SRILAB.html
@@ -530,7 +530,9 @@
                 flex-direction: column;
                 align-items: center;
             }
-            
+            .hero {
+                padding-top: 180px; /* Increased from the original value */
+            }
             .logo {
                 margin-bottom: 15px;
             }
@@ -575,7 +577,9 @@
             body {
                 font-size: 0.9rem;
             }
-            
+            .hero {
+                padding-top: 160px;
+            }
             .hero h1 {
                 font-size: 1.8rem;
             }
