--- a/SRILAB.html
+++ b/SRILAB.html
@@ -141,7 +141,7 @@
         
         /* Hero Section */
         .hero {
-            background: linear-gradient(rgba(51, 51, 51, 0.8), rgba(51, 51, 51, 0.9)), url('images/Noddingdonkey.png0') center/cover no-repeat;
+            background: linear-gradient(rgba(51, 51, 51, 0.8), rgba(51, 51, 51, 0.9)), url('images/Noddingdonkey.png') center/cover no-repeat;
             color: white;
             text-align: center;
             padding: 150px 0 100px;
