--- a/SRILAB.html
+++ b/SRILAB.html
@@ -889,7 +889,7 @@
     <footer>
         <div class="container">
             <div class="footer-content">
-                <div class="footer-logo">UTB <span>Sand Screen Lab</span></div>
+                <div class="footer-logo">UTB <span>Sand Retention Innovation Lab</span></div>
                 
                 <ul class="footer-links">
                     <li><a href="#home">Home</a></li>
