--- a/SRILAB.html
+++ b/SRILAB.html
@@ -690,7 +690,7 @@
                     <p>As the lab has now completed BSP's original aims, we are planning to broaden access to our ongoing research. The lessons we have learned in Brunei are applicable in many other locations. We regularly present at SPE conferences and workshops, but we recognise that some operators, service companies and screen manufacturers are not just interested in seeing results, but would like to actively join us in the research process.</p>
                 </div>
                 <div class="about-image">
-                    <img src="images/Facility.png" alt="UTB Sand Screen Lab Facility">
+                    <img src="images/Facility2.png" alt="UTB Sand Screen Lab Facility">
                 </div>
             </div>
         </div>
