--- a/SRILAB.html
+++ b/SRILAB.html
@@ -724,7 +724,7 @@
                             <img src="images/Facility3.png" alt="UTB Facility 1">
                         </div>
                         <div class="slideshow-slide fade">
-                            <img src="images/simulation.png" alt="UTB Facility 2">
+                            <img src="images/Simulation.png" alt="UTB Facility 2">
                         </div>
                     </div>
                 </div>
