--- a/SRILAB.html
+++ b/SRILAB.html
@@ -402,7 +402,7 @@ a:hover {
             position: relative;
             padding-left: 25px;
             display: inline-block;
-            text-align: left;
+            text-align: center;
         }
         
         .subscription-features li:before {
