--- a/SRILAB.html
+++ b/SRILAB.html
@@ -404,7 +404,7 @@ a:hover {
         .subscription-features li:before {
             content: "✓";
             color: #f2c94c;
-            position: absolute;
+            position: relative;
             left: 0;
         }
         
