--- a/SRILAB.html
+++ b/SRILAB.html
@@ -405,7 +405,7 @@ a:hover {
             content: "✓";
             color: #f2c94c;
             position: relative;
-            left: 0;
+            /*left: 0;*/
         }
         
         /* Facilities Section */
