--- a/SRILAB.html
+++ b/SRILAB.html
@@ -404,6 +404,7 @@ a:hover {
         .subscription-features li:before {
             content: "✓";
             color: #f2c94c;
+            padding-left: 15px;
             position: relative;
             /*left: 0;*/
         }
