--- a/SRILAB.html
+++ b/SRILAB.html
@@ -404,7 +404,7 @@ a:hover {
         .subscription-features li:before {
             content: "✓";
             color: #f2c94c;
-            padding-left: 0px;
+            padding-right: 10px;
             position: relative;
             /*left: 0;*/
         }
