--- a/SRILAB.html
+++ b/SRILAB.html
@@ -402,10 +402,10 @@ a:hover {
         }
         
         .subscription-features li:before {
-            content: "✓";
+            content: "✓  ";
             color: #f2c94c;
-            padding-left: 20px;
-            position: relative;
+            position: absolute;
+            left: 0;
         }
         
         /* Facilities Section */
