--- a/SRILAB.html
+++ b/SRILAB.html
@@ -772,10 +772,11 @@ a:hover {
             <div class="about-content">
                 <div class="about-text">
                     <h3>About Our Lab</h3>
+                    <div style="height: 10px;"></div>
                     <p>Established in 2020 with initial funding from Brunei Shell Petroleum (BSP), the Lab has developed a cutting-edge screen retention testing facility and expanded to include advanced numerical simulation capabilities and multidisciplinary expertise.</p>
-                    
+                    <div style="height: 20px;"></div>
                     <p>In collaboration with renowned academic partners, including the University of New South Wales and Imperial College London, SRI reflects UTB's commitment to delivering impactful solutions for the oil and gas industry while fostering innovation, sustainability, and collaboration globally.</p>
-            
+                    <div style="height: 20px;"></div>
                     <p>As the lab has now completed BSP's original aims, we are planning to broaden access to our ongoing research. The lessons we have learned in Brunei are applicable in many other locations. We regularly present at SPE conferences and workshops, but we recognise that some operators, service companies and screen manufacturers are not just interested in seeing results, but would like to actively join us in the research process.</p>
                 </div>
                 <div class="about-image">
