--- a/SRILAB.html
+++ b/SRILAB.html
@@ -96,6 +96,8 @@ a:hover {
             max-width: 700px;
             margin-left: auto;
             margin-right: auto;
+            font-style: italic;
+
         }
         
         /* Header */
