--- a/SRILAB.html
+++ b/SRILAB.html
@@ -962,7 +962,7 @@ a:hover {
     <section id="home" class="hero">
         <div class="video-container">
             <video id="hero-video" autoplay muted loop>
-                <source src="images/oil-gas-video.mp4" type="video/mp4">
+                <source src="images/SRILABUTB.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
             <div class="video-controls">
