--- a/SRILAB.html
+++ b/SRILAB.html
@@ -179,7 +179,7 @@ a:hover {
         .video-container video {
             width: 100%;
             display: block;
-            object-fit: cover;
+            object-fit: contain;
             height: 70vh;
         }
         
