--- a/SRILAB.html
+++ b/SRILAB.html
@@ -180,8 +180,8 @@ a:hover {
             width: 100%;
             display: block;
             object-fit: cover;
-            object-position: center;
-            height: 100vh;
+            object-position: 40%;
+            height: 80vh;
         }
         
         .video-controls {
