--- a/SRILAB.html
+++ b/SRILAB.html
@@ -1045,9 +1045,9 @@
                         <img src="images/blog-2.jpg" alt="BSP Featured Story">
                     </div>
                     <div class="blog-content">
-                        <div class="blog-date">2024</div>
+                        <div class="blog-date">June 2023</div>
                         <h3>BSP Featured Story</h3>
-                        <p>Click below to view this featured story from Brunei Shell Petroleum's media center.</p>
+                        <p>Local take on Screen-Retention</p>
                         <a href="https://www.bsp.com.bn/main/media-centre/featured-stories/view/6" target="_blank" class="blog-read-more">Read More →</a>
                     </div>
                 </div>
@@ -1057,16 +1057,12 @@
                         <img src="images/blog-3.jpg" alt="BSP Featured Story">
                     </div>
                     <div class="blog-content">
-                        <div class="blog-date">2024</div>
+                        <div class="blog-date">December 2024</div>
                         <h3>BSP Featured Story</h3>
-                        <p>Click below to view this featured story from Brunei Shell Petroleum's media center.</p>
+                        <p>It Takes Grit: Local Youth Takes on Sand Retention Testing and Modelling</p>
                         <a href="https://www.bsp.com.bn/main/media-centre/featured-stories/view/29" target="_blank" class="blog-read-more">Read More →</a>
                     </div>
                 </div>
-            </div>
-            
-            <div style="text-align: center; margin-top: 30px;">
-                <a href="#" class="btn">View All Articles</a>
             </div>
         </div>
     </section>
@@ -1291,7 +1287,7 @@
                         <span class="faq-toggle">+</span>
                     </div>
                     <div class="faq-answer">
-                        <p>A standard comparative testing program typically takes 4-6 weeks, including setup, testing, and analysis. More complex evaluations involving multiple screen types or extensive numerical modeling may take 8-12 weeks. We can also accommodate rush projects when needed.</p>
+                        <p>A standard comparative testing program typically takes 1-2 weeks, including setup, testing, and analysis. More complex evaluations involving multiple screen types or extensive numerical modeling may take longer. We can also accommodate rush projects when needed.</p>
                     </div>
                 </div>
             </div>
