--- a/SRILAB.html
+++ b/SRILAB.html
@@ -1030,7 +1030,7 @@
             <div class="blog-grid">
                 <div class="blog-card">
                     <div class="blog-image">
-                        <img src="utbsand.jpg" alt="UTB Petroleum Workshop">
+                        <img src="utbsand.jpeg" alt="UTB Petroleum Workshop">
                     </div>
                     <div class="blog-content">
                         <div class="blog-date">March 2024</div>
