--- a/SRILAB.html
+++ b/SRILAB.html
@@ -1046,8 +1046,8 @@
                     </div>
                     <div class="blog-content">
                         <div class="blog-date">June 2023</div>
-                        <h3>BSP Featured Story</h3>
-                        <p>Local take on Screen-Retention</p>
+                        <h3>BSP Featured Story: Local Take On Screen-Retention</h3>
+                        <p>Click below to read the full article</p>
                         <a href="https://www.bsp.com.bn/main/media-centre/featured-stories/view/6" target="_blank" class="blog-read-more">Read More →</a>
                     </div>
                 </div>
@@ -1058,8 +1058,8 @@
                     </div>
                     <div class="blog-content">
                         <div class="blog-date">December 2024</div>
-                        <h3>BSP Featured Story</h3>
-                        <p>It Takes Grit: Local Youth Takes on Sand Retention Testing and Modelling</p>
+                        <h3>BSP Featured Story: It Takes Grit: Local Youth Takes on Sand Retention Testing and Modelling</h3>
+                        <p>Click below to read the full article</p>
                         <a href="https://www.bsp.com.bn/main/media-centre/featured-stories/view/29" target="_blank" class="blog-read-more">Read More →</a>
                     </div>
                 </div>
