--- a/SRILAB.html
+++ b/SRILAB.html
@@ -1042,7 +1042,7 @@
                 
                 <div class="blog-card">
                     <div class="blog-image">
-                        <img src="images/Localtakeon.jpg" alt="BSP Featured Story">
+                        <img src="images/Localtake.jpg" alt="BSP Featured Story">
                     </div>
                     <div class="blog-content">
                         <div class="blog-date">June 2023</div>
