--- a/SRILAB.html
+++ b/SRILAB.html
@@ -1003,7 +1003,10 @@
                             <img src="images/Facility3.png" alt="UTB Facility 1">
                         </div>
                         <div class="slideshow-slide fade">
-                            <img src="images/Simulation1.png" alt="UTB Facility 2">
+                            <img src="images/LPSA.png" alt="UTB Facility2">
+                        </div>
+                        <div class="slideshow-slide fade">
+                            <img src="images/Simulation1.png" alt="UTB Sim1">
                         </div>
                         
                         <!-- Next and previous buttons -->
