--- a/SRILAB.html
+++ b/SRILAB.html
@@ -1017,6 +1017,7 @@
                         <div class="dots-container">
                             <span class="dot" onclick="currentSlide(0)"></span>
                             <span class="dot" onclick="currentSlide(1)"></span>
+                            <span class="dot" onclick="currentSlide(1)"></span>
                         </div>
                     </div>
                 </div>
