--- a/SRILAB.html
+++ b/SRILAB.html
@@ -399,7 +399,7 @@
             height: 100%;
             border-radius: 8px;
             display: block;
-            object-fit: cover; /* This crops/scales the image to fill the container while maintaining aspect ratio */
+            object-fit: contain; /* This crops/scales the image to fill the container while maintaining aspect ratio */
         }
         
         /* Fade animation */
