--- a/SRILAB.html
+++ b/SRILAB.html
@@ -1296,7 +1296,7 @@
                         <span class="faq-toggle">+</span>
                     </div>
                     <div class="faq-answer">
-                        <p>A standard comparative testing program typically takes 1-2 weeks, including setup, testing, and analysis. More complex evaluations involving multiple screen types or extensive numerical modeling may take longer. We can also accommodate rush projects when needed.</p>
+                        <p>A standard comparative testing program typically takes 1-2 weeks, including setup, testing, and analysis. More complex evaluations involving multiple screen types or extensive numerical modeling may take longer.</p>
                     </div>
                 </div>
             </div>
